	* Added initial support for sound (esd/artsd).
	* Added optional support for utmp/wtmp/lastlog database.
	* Removed support for OSS components prior version 1.4.0 in nxnode.
	  Added -option option to nxagent/nxdesktop.
	* Added forwarding to commercial server via destination port.
	* Added more compatible getparam function

11.03.2005 FreeNX 0.3.1
	* Fixed keyboard mapping problems.
	* Fixed unix-custom mode; now allowing parameters to be passed.
	* Fixed password prompt detection support in nxnode-login.
	* Fixed locking to prevent usage of the same display.

05.03.2005 FreeNX 0.3.0 "Chemnitzer LinuxTage Edition"
	* Initial CVS checkin.
	* Added unix-default as session type - by Kalev Lember 
	  <kalev@smartlink.ee>
	* Fixed nxclient loop - by "Neil Wilson" <neil@aldur.co.uk>.
	* Several fixes by Thorsten Sandfuchs <fux@akk.org>.
	* Optional config file support (system- and user-wide)
		- by Jon Severinsson <jonno@users.berlios.de>.
	* Moved logfile to /var/log/nxserver.log.
	* Moved nx homedir to /var/lib/nxserver/home
	* Complete rewrite of authentication code
		* passdb, su or ssh is now supported.
		- by Jon Severinsson <jonno@users.berlios.de>.
	* Added NODE_AUTOSTART, EXPORT_{USERIP/SESSIONID} config file
	  directives.
	* Added mechanism to forward connection to commercial NoMachine 
	  nxserver (as available from www.nomachine.com).
	* Added mechanism to forward connection to another nxserver. This
	  allows using a "chain" of nxservers.
	* Added "floating window" support by using rootless nxagent as
	  it will be standard in NX 1.5.0.
	* Added "floating window" support by just nxproxy/nxproxy connection
	  and added configuration directive to enable rootless mode.
	* Added nxsetup --uninstall and added more feature to nxsetup.
	  Note: You need to use nxsetup --install for installation now.
	* Added Disabling of port-forwarding, X11-forwarding, ... to ssh-key.

	* Security: Fixed a security blunder. Authority file was not used 