@@ -37,7 +37,7 @@
 #
 #           https://mail.kde.org/mailman/listinfo/freenx-knx
 #
-# CVS: $Id: node.conf.sample,v 1.11 2005/03/12 02:49:28 fabianx Exp $
+# CVS: $Id: node.conf.sample,v 1.12 2005/03/12 17:55:13 jonno Exp $
 
 #########################################################################
 # FreeNX specific node.conf directives
@@ -167,6 +167,11 @@
 # Note that this directory must be unique for every user! To accomplish this 
 # it is recomended to include $USER in the path.
 #USER_FAKE_HOME=$HOME
+
+# Add the nx libraries to LD_LIBRARY_PATH before starting nx agents.
+# WARNING: This will NOT (and should not) affect aplications. ONLY Disable this
+#          if the nx libraries is in a standard system path (such as /usr/lib)!
+#SET_LD_LIBRARY_PATH="1"
 
 #########################################################################
 # NoMachine node.conf compatible (almost) directives
