@@ -13,7 +13,7 @@
 #
 # License: GNU GPL, version 2
 #
-# CVS: $Id: nxnode,v 1.38 2005/03/12 16:54:47 fabianx Exp $
+# CVS: $Id: nxnode,v 1.39 2005/03/12 17:55:13 jonno Exp $
 #
 # 21.06.2004: - Full reconnection support
 
@@ -173,6 +173,7 @@ node_start_applications()
 		fi
 	fi
 
+	[ "$virtualdesktop" = "0" -a "$ENABLE_ROOTLESS_MODE" != "1" ] && export LD_PRELOAD="$APPLICATION_LIBRARY_PRELOAD:$LD_PRELOAD"
 	DISPLAY=unix:$display $STARTX >>$USER_FAKE_HOME/.nx/C-$sess_id/session 2>&1 &
 	APP_PID=$!
 	mkdir -p $USER_FAKE_HOME/.nx/C-$sess_id/pids/
@@ -204,11 +205,10 @@ node_start_agent()
 	R=""
 	[ "$virtualdesktop" = "0" ] && R="-rootless"
 
-	[ "$NX_NOMACHINE_WAY" = "1" ] && export LD_LIBRARY_PATH="$PATH_LIB:$LD_LIBRARY_PATH"
-
 	if [ "$type" = "windows" ]
 	then
 		# nxdesktop session (Windows RDP)
+		[ "$SET_LD_LIBRARY_PATH" = "1" ] && export LD_LIBRARY_PATH="$AGENT_LIBRARY_PATH:$LD_LIBRARY_PATH"
 		U=""
 		P=""
 		[ -n "$agent_user" ] && U="-u $agent_user"
@@ -217,15 +217,18 @@ node_start_agent()
 	elif [ "$type" = "vnc" ]
 	then
 		# nxviewer session (VNC RFP)
+		[ "$SET_LD_LIBRARY_PATH" = "1" ] && export LD_LIBRARY_PATH="$AGENT_LIBRARY_PATH:$LD_LIBRARY_PATH"
 		mkdir -p $USER_FAKE_HOME/.nx/C-$sess_id/scripts/
 		echo "$agent_password" | $PATH_BIN/nxpasswd $USER_FAKE_HOME/.nx/C-$sess_id/scripts/.passwd doit
 		$PATH_BIN/nxviewer -encodings tight hextile copyrect raw -passwd $USER_FAKE_HOME/.nx/C-$sess_id/scripts/.passwd -name "NX - $user@$SERVER_NAME:$display - $session (GPL Edition)"  $agent_server $AGENT_EXTRA_OPTIONS_RFB 2>>$USER_FAKE_HOME/.nx/C-$sess_id/session &
 	elif [ -n "$R" -a "$ENABLE_ROOTLESS_MODE" != "1" ]
 	then
 		# nxproxy single application mode session
+		[ "$SET_LD_LIBRARY_PATH" = "1" ] && export LD_LIBRARY_PATH="$PROXY_LIBRARY_PATH:$LD_LIBRARY_PATH"
 		$PATH_BIN/nxproxy -C :$display $PROXY_EXTRA_OPTIONS 2>>$USER_FAKE_HOME/.nx/C-$sess_id/session &
 	else
 		# nxagent session (X11)
+		[ "$SET_LD_LIBRARY_PATH" = "1" ] && export LD_LIBRARY_PATH="$AGENT_LIBRARY_PATH:$LD_LIBRARY_PATH"
 		FP=""
 		[ -n "$AGENT_FONT_SERVER" ] && FP="-fp $AGENT_FONT_SERVER"
 		$PATH_BIN/nxagent -persistent $R -name "NX - $user@$SERVER_NAME:$display - $session (GPL Edition)" -option "$USER_FAKE_HOME/.nx/C-$sess_id/options" $K $G $B $FP :$display $AGENT_EXTRA_OPTIONS_X 2>>$USER_FAKE_HOME/.nx/C-$sess_id/session &
