@@ -10,6 +10,9 @@
 	  Added -option option to nxagent/nxdesktop.
 	* Added forwarding to commercial server via destination port.
 	* Added more compatible getparam function
+	* Sets LD_PRELOAD for applications and LD_LIBRARY_PATH for nxagent/nxproxy by default.
+		- SET_LD_LIBRARY_PATH replaces NX_NOMACHINE_WAY and is 
+		  enabled by default, as it is now safe to do so
 
 11.03.2005 FreeNX 0.3.1
 	* Fixed keyboard mapping problems.
